--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "build": "tsc -p tsconfig.json",
     "watch": "tsc -p tsconfig.json --watch",
-    "start": "node --trace-warnings --abort-on-uncaught-exception --unhandled-rejections=strict dist/index.js",
+    "start": "node --trace-warnings dist/index.js",
     "test": "jest --forceExit --detectOpenHandles --coverage --verbose --passWithNoTests",
     "lint:check": "npx eslint . --ext .ts",
     "lint:fix": "npx eslint . --ext .ts --fix"
@@ -22,11 +22,13 @@
     "tabWidth": 2
   },
   "dependencies": {
-    "@dcl/ecs": "^7.3.30",
+    "@dcl/ecs": "^7.4.21",
+    "@dcl/js-runtime": "^7.4.21",
     "@well-known-components/env-config-provider": "^1.2.0",
     "@well-known-components/fetch-component": "^2.0.2",
     "@well-known-components/http-server": "^2.0.0",
     "@well-known-components/interfaces": "^1.4.2",
-    "protobufjs": "^7.2.5"
+    "protobufjs": "^7.2.5",
+    "source-map": "^0.7.4"
   }
 }
