chore: Adding missing env variable

--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@
 //REMOTE_SCENE_COORDS=100,100
 //REMOTE_SCENE_COORDS=60,-137
 REMOTE_SCENE_COORDS=-129,-77
+CATALYST_URL=https://peer.decentraland.org
